css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Inter', sans-serif;
}

.main-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 100px;
}

.form-wrapper {
  margin: 0 auto;
  max-width: 570px;
  width: 100vw;
  background: white;
  padding: 40px;
}

.form-img {
  margin-bottom: 45px;
}

.input-group {
  margin-bottom: 18px;
}

.form-select {
  width: 100%;
  padding: 12px 22px;
  border-radius: 5px;
  border: 1px solid #dde3ec;
  background: #ffffff;
  font-size: 16px;
  color: #536387;
  outline: none;
  resize: none;
}

.question-wrapper {
  margin-bottom: 25px;
}

.question-flex {
  display: flex;
  flex-direction: column;
  gap: 15px;
}

.radio-label {
  font-size: 14px;
  line-height: 24px;
  color: #07074d;
  position: relative;
  padding-left: 25px;
  cursor: pointer;
  user-select: none;
}

.input-radio {
  position: absolute;
  opacity: 0;
  cursor: pointer;
}

.radio-checkmark {
  position: absolute;
  top: -1px;
  left: 0;
  height: 18px;
  width: 18px;
  background-color: #ffffff;
  border: 1px solid #dde3ec;
  border-radius: 50%;
}

.radio-label
  .input-radio:checked
  ~ .radio-checkmark {
  background-color: #133cb6;
}

.radio-checkmark:after {
  content: '';
  position: absolute;
  display: none;
}

.radio-label
  .input-radio:checked
  ~ .radio-checkmark:after {
  display: block;
}

.radio-label .radio-checkmark:after {
  top: 50%;
  left: 50%;
  width: 10px;
  height: 10px;
  border-radius: 50%;
  background: #ffffff;
  transform: translate(-50%, -50%);
}

.form-input {
  width: 100%;
  padding: 13px 22px;
  border-radius: 5px;
  border: 1px solid #dde3ec;
  background: #ffffff;
  font-weight: 500;
  font-size: 16px;
  color: #07074d;
  outline: none;
  resize: none;
}

.form-input::placeholder {
  color: #536387;
}

.form-input:focus {
  border-color: #133cb6;
  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
}

.form-label {
  color: #07074d;
  font-size: 14px;
  line-height: 24px;
  display: block;
  margin-bottom: 10px;
}

.btn {
  text-align: center;
  width: 100%;
  font-size: 16px;
  border-radius: 5px;
  padding: 14px 25px;
  border: none;
  font-weight: 500;
  background-color: #3a7536;
  color: white;
  cursor: pointer;
  margin-top: 25px;
}
.btn:hover {
  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
}








.navbar {
  overflow: hidden;
  background-color: #133cb6;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1000;
}

.navbar a {
  float: left;
  display: block;
  color: #f2f2f2;
  text-align: center;
  padding: 15px 50px;
  text-decoration: none;
  font-size: 20px;
  font-weight: 800;
}

.navbar a:hover {
  background: #ddd;
  color: black;
}

.navbar-right {
  float: right;
}

.main {
  padding: 16px;
  margin-top: 30px;
  height: 1500px;
}

.big-btn {
  text-decoration: none;
  text-align: center;
  width: 40vw;
  max-width: 40%;
  font-size: 24px;
  border-radius: 5px;
  padding: 50px 25px;
  border: none;
  font-weight: 750;
  background-color: #04876b;
  color: white;
  cursor: pointer;
  margin-top: 25px;
  display: inline-block;
  /* float: left; */
  margin: 20px;
}

.big-btn:hover {
  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.05);
}

.checkbox-checkmark {
  position: absolute;
  top: -1px;
  left: 0;
  height: 18px;
  width: 18px;
  background-color: #ffffff;
  border: 1px solid #dde3ec;
  /* border-radius: 50%; */
}

.input-checkbox {
  position: absolute;
  opacity: 0;
  cursor: pointer;
}

/* Create the checkmark/indicator (hidden when not checked) */
.checkbox-checkmark:after {
  content: "";
  position: absolute;
  display: none;
}

.checkbox-label input:checked ~ .checkbox-checkmark:after {
  display: block;
}

.checkbox-label {
  font-size: 14px;
  line-height: 24px;
  color: #07074d;
  position: relative;
  padding-left: 25px;
  cursor: pointer;
  user-select: none;
}

.checkbox-label
  .input-checkbox:checked
  ~ .checkbox-checkmark {
  background-color: #e1e4ee;
}

.checkbox-label .checkbox-checkmark:after {
  left: 4px;
  top: 0px;
  width: 5px;
  height: 12px;
  border: solid #133cb6;
  border-width: 0 3px 3px 0;
  transform: rotate(45deg);
}

.slider {
  appearance: none;
  width: 100%;
  height: 10px;
  background: #d3d3d3;
  outline: none;
  opacity: 1;
}

.slider:hover {
  opacity: 0.75;
}

.slider::-webkit-slider-thumb {
  appearance: none;
  width: 15px;
  height: 15px;
  background: #133cb6;
  cursor: pointer;
}

.image-container {
  display: flex;
  justify-content: space-between; /* Adjust as needed */
  align-items: center; /* Align images vertically in the center */
}

.image-container img {
  max-width: 40vw; /* Ensure images don't exceed their container */
  height: auto; /* Maintain aspect ratio */
}

.tooltip {
  position: relative;
  display: inline-block;
  border-bottom: 1px dotted #133cb6;
  cursor: help;
  background-color: #e7e9f3;
}

.tooltip .tooltiptext {
  visibility: hidden;
  width: 120px;
  background-color: #133cb6;
  color: #e7e9f3;
  text-align: center;
  border-radius: 3px;
  padding: 5px 5px;
  position: absolute;
  z-index: 1;
  bottom: 125%;
  left: 0%;
  margin-left: 0px;
  width: 200px;
  border: solid 2px #a6abbd;
  font-size: 0.75em;
  line-height: 12px;
}

.tooltip:hover .tooltiptext {
  visibility: visible;
}

.button-wrapper {
  display: flex;
}

